# config-vault-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml
src/: lib.rs
